--- a/Assignment_Week_2.ipynb
+++ b/Assignment_Week_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment Week 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPUx0D4UH3fK+5IOYUGArxL",
+      "authorship_tag": "ABX9TyOh4SGc6dCoWF6P8hjdATxH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fG0u3wRzPXbX",
-        "colab_type": "text"
+        "id": "fG0u3wRzPXbX"
       },
       "source": [
         "# Assignment - Week 2 - Python Basics\n",
@@ -45,8 +44,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mSW1_nsqSJvI",
-        "colab_type": "text"
+        "id": "mSW1_nsqSJvI"
       },
       "source": [
         "\n",
@@ -63,8 +61,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6eXVpIsdQfMN",
-        "colab_type": "text"
+        "id": "6eXVpIsdQfMN"
       },
       "source": [
         "\n",
@@ -118,12 +115,117 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7ly5GpPgQe5t",
-        "colab_type": "code",
-        "colab": {}
+        "id": "7ly5GpPgQe5t"
       },
       "source": [
         ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bgil3SMsf-8W"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**SOLUTIONS**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kCUxg51ogDRt"
+      },
+      "source": [
+        "#Problem 0\n",
+        "\n",
+        "print(\"Hello World\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aSdPnzBfgImB"
+      },
+      "source": [
+        "#Problem 1\n",
+        "\n",
+        "X = 3\n",
+        "Y = 4\n",
+        "Z = 6\n",
+        "\n",
+        "answer = X + Y + Z\n",
+        "\n",
+        "print(\"The sum of the three numbers is \", answer)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZM6SFkLNgVRR"
+      },
+      "source": [
+        "#Problem 2\n",
+        "\n",
+        "X = int( input(\"Enter the first number: \"))\n",
+        "Y = int( input(\"Enter the second number: \"))\n",
+        "Z = int( input(\"Enter the third number: \"))\n",
+        "\n",
+        "answer = X + Y + Z\n",
+        "\n",
+        "print(\"The sum of the three numbers is \", answer)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j4WlN80RgnqI"
+      },
+      "source": [
+        "#Problem 3\n",
+        "\n",
+        "first_name = input(\"Enter your first name: \")\n",
+        "last_name = input(\"Enter your first name: \")\n",
+        "age = int( input(\"Enter your age: \") )\n",
+        "\n",
+        "print(first_name, last_name, \"is now\", age, \"years old\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JFJ29V6_hGhF"
+      },
+      "source": [
+        "#Problem 4\n",
+        "\n",
+        "name = input(\"Enter your name: \")\n",
+        "\n",
+        "print(\"Happy Birthday to You\")\n",
+        "print(\"Happy Birthday to You\")\n",
+        "print(\"Happy Birthday Dear\", name)\n",
+        "print(\"Happy Birthday to You!\")"
       ],
       "execution_count": null,
       "outputs": []
