--- a/Assignment_Week_3.ipynb
+++ b/Assignment_Week_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment Week 3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXLfoMXaExZuXhnYRSYxGd",
+      "authorship_tag": "ABX9TyPC9W0fCNtb6jJXt/FpBhP9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5Hr8F8azZKy_",
-        "colab_type": "text"
+        "id": "5Hr8F8azZKy_"
       },
       "source": [
         "# Assignment - Week 3 - Flow Control\n",
@@ -72,8 +71,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9e-KsmDyfOHN",
-        "colab_type": "text"
+        "id": "9e-KsmDyfOHN"
       },
       "source": [
         "**PART 2 : PROGRAMMING PROBLEMS**\n",
@@ -100,8 +98,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "lsIagqsAfwVV",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "ef3668a0-0266-4c8f-aacf-600edc709757",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "def is_it_even(number):\n",
@@ -121,14 +122,21 @@
         "else:\n",
         "  print(\"5 is NOT an even number\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 is NOT an even number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Hb6MWOLEfxmT",
-        "colab_type": "text"
+        "id": "Hb6MWOLEfxmT"
       },
       "source": [
         "0) Write a loop that prints \"Hello World\" five times\n",
@@ -175,9 +183,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QnMxv9iuFyMG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QnMxv9iuFyMG"
       },
       "source": [
         "#These instructions pick a random number\n",
@@ -197,12 +203,168 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aHvro65PGp0J",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aHvro65PGp0J"
       },
       "source": [
         ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1gMMKhKMhrbu"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**SOLUTIONS**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XszYoPoWhvgH"
+      },
+      "source": [
+        "#Problem 0\n",
+        "\n",
+        "for num in range(5):\n",
+        "  print(\"Hello World!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uILDRBwBh1Ci"
+      },
+      "source": [
+        "#Problem 1\n",
+        "\n",
+        "num1 = int(input(\"Enter a Number: \"))\n",
+        "num2 = int(input(\"Enter another Number: \"))\n",
+        "\n",
+        "if num1 < num2:\n",
+        "  print(\"The smaller number is: \", num1)\n",
+        "else:\n",
+        "  print(\"The smaller number is: \", num2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kEze0Ph-iHL1"
+      },
+      "source": [
+        "#Problem 2\n",
+        "\n",
+        "num1 = int(input(\"Enter a Number: \"))\n",
+        "num2 = int(input(\"Enter another Number: \"))\n",
+        "num3 = int(input(\"Enter a third Number: \"))\n",
+        "\n",
+        "if (num1 <= num2) and (num2 <= num3):\n",
+        "  answer = num2\n",
+        "if (num1 <= num3) and (num3 <= num2):\n",
+        "  answer = num3\n",
+        "if (num2 <= num1) and (num1 <= num3):\n",
+        "  answer = num1\n",
+        "if (num2 <= num3) and (num3 <= num1):\n",
+        "  answer = num3\n",
+        "if (num3 <= num1) and (num1 <= num2):\n",
+        "  answer = num1\n",
+        "if (num3 <= num2) and (num2 <= num1):\n",
+        "  answer = num2\n",
+        "\n",
+        "print(\"The middle number is: \", answer)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U298cfgWi9va"
+      },
+      "source": [
+        "#Problem 3\n",
+        "#There were two versions of Problem 3\n",
+        "#I gave full credit for solving either of the two versions\n",
+        "\n",
+        "even_count = 0\n",
+        "\n",
+        "for num in [3, 2, 8, 9, 17, 24]: \n",
+        "  if is_it_even(num):\n",
+        "    even_count = even_count + 1\n",
+        "\n",
+        "print(\"The number of even numbers is \", even_count)\n",
+        "\n",
+        "even_count = 0\n",
+        "\n",
+        "for count in range(5):\n",
+        "  num = int(input(\"Enter a Number: \"))\n",
+        "  if is_it_even(num):\n",
+        "    even_count = even_count + 1\n",
+        "  \n",
+        "print(\"The number of even numbers is \", even_count)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HxNBK3uTkFdQ"
+      },
+      "source": [
+        "#Problem 4\n",
+        "\n",
+        "even_count = 0\n",
+        "number = 0\n",
+        "\n",
+        "while not number == -1:\n",
+        "  number = int(input(\"Enter a number, or type -1 to quit: \"))\n",
+        "  if is_it_even(number):\n",
+        "    even_count = even_count + 1\n",
+        "\n",
+        "print(\"The number of even numbers is \", even_count)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v9f3qhn0k0iY"
+      },
+      "source": [
+        "#Problem 5\n",
+        "\n",
+        "target_num = 51\n",
+        "guess = 0\n",
+        "\n",
+        "while not guess == target_num:\n",
+        "  guess = int(input(\"Enter a Number: \"))\n",
+        "  if guess < target_num:\n",
+        "    print(\"Too Low\")\n",
+        "  if guess > target_num:\n",
+        "    print(\"Too High\")\n",
+        "\n",
+        "print(\"You correctly guessed the number\", target_num, \"!!!\")"
       ],
       "execution_count": null,
       "outputs": []
