--- a/Week_6_Worksheet.ipynb
+++ b/Week_6_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 6 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMMThxTfRjN0ajmPzUTz6Q",
+      "authorship_tag": "ABX9TyNSyquT34D4594jZoPe7QPk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -264,7 +264,7 @@
         "\n",
         "print(\"Excellent, you entered\", user_text)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -500,11 +500,11 @@
       "source": [
         "my_nums = []\n",
         "\n",
-        "number = input(\"Enter a number to add to the list, or enter 0 to stop: \")\n",
+        "number = int( input(\"Enter a number to add to the list, or enter 0 to stop: \"))\n",
         "\n",
         "while not number == 0:\n",
         "  my_nums.append(number)\n",
-        "  number = input(\"Enter a number to add to the list, or enter 0 to stop: \")\n",
+        "  number = int( input(\"Enter a number to add to the list, or enter 0 to stop: \"))\n",
         "\n",
         "print(\"The final list is: \", my_nums)"
       ],
