--- a/Week_8_Worksheet.ipynb
+++ b/Week_8_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 8 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMUdFgeWTIHoCqV/NbeW01T",
+      "authorship_tag": "ABX9TyNuA+pc8tgCV0hncn7dL51R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,8 +32,153 @@
       "source": [
         "**FUN WITH HANGMAN**\n",
         "\n",
-        "For the assignment this week, "
+        "For the assignment this week, you will be implemented Hangman. The goal of this worksheet is to provide you with some examples that may be helpful in writing your Hangman program. \n",
+        "\n",
+        "You can find he assignment here: https://colab.research.google.com/github/mlepinski/Python-Worksheets/blob/master/Assignment_Week_8.ipynb"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1fbvnCwoX4hk"
+      },
+      "source": [
+        "**BLANKS, LISTS, AND SUCH**\n",
+        "\n",
+        "My recommendation is to use a list of characters (letters/symbols). Lists have the advantage that it is easy to change a particular item in a list. \n",
+        "\n",
+        "For example, if you wanted to create a list of 3 blanks you could do something like this:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9LwNeEKoEabq"
+      },
+      "source": [
+        "my_list = []\n",
+        "for num in range(3):\n",
+        "  my_list.append(\"-\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sgp8i8kDEiAL"
+      },
+      "source": [
+        "The above example uses the dash character \"-\" for a blank, you are welcome to use another character like \"_\" \n",
+        "\n",
+        "It may be useful to convert a list to a string, or a string back to a list. Here is an example:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4LOr1wmvFXdK"
+      },
+      "source": [
+        "my_list = [\"C\", \"A\", \"T\"]\n",
+        "print(my_list)\n",
+        "\n",
+        "my_string = \"\"\n",
+        "my_string = my_string.join(my_list)\n",
+        "print(my_string)\n",
+        "\n",
+        "new_list = list(my_string)\n",
+        "print(new_list)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mlmT3XgTFB09"
+      },
+      "source": [
+        "Remember that if you want to change a particular item in a list, you can use the square bracket notation **my_list[0]** for the first item in a list ... or **my_list[2]** for the third item in a list. \n",
+        "\n",
+        "Here is an example:\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b8D5v65yF8rQ"
+      },
+      "source": [
+        "my_list = [\"C\", \"A\", \"T\"]\n",
+        "print(my_list)\n",
+        "\n",
+        "num = 1\n",
+        "my_list[num] = \"O\"\n",
+        "print(my_list)\n",
+        "\n",
+        "my_list[0] = \"D\"\n",
+        "print(my_list)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qYmAfTUCGZPz"
+      },
+      "source": [
+        "The **len** function in Python can be used to find either the length of a string or the length of a list. It may be helpful to you in your program. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pd7zimWTGo7l"
+      },
+      "source": [
+        "my_list = [\"C\", \"A\", \"T\"]\n",
+        "length = len(my_list)\n",
+        "print(my_list, length)\n",
+        "\n",
+        "my_string = \"door\"\n",
+        "length = len(my_string)\n",
+        "print(my_string, length)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sNRmIp_mHBtO"
+      },
+      "source": [
+        "Finally, it may be helpful to find a particular letter in a string (or a list). \n",
+        "\n",
+        "The dot **index** command works for both strings and lists and tells you the position of a letter (or symbol or whatever) in the string (or list). \n",
+        "\n",
+        "NOTE: Python starts counting at 0, so if **index** returns a 0, that means the thing you are looking for is the first letter in the string (or list). Similarly, **index** will return a 2 if the thing you are looking for is the third letter in the string. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NWW1OMf_HQiL"
+      },
+      "source": [
+        "my_list = [\"C\", \"A\", \"T\"]\n",
+        "num = my_list.index(\"T\")\n",
+        "print(my_list, ind)\n",
+        "\n",
+        "letter = \"K\"\n",
+        "my_string = \"KITTEN\"\n",
+        "num = my_string.index(letter)\n",
+        "print(my_string, num)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -44,17 +189,6 @@
         "**ASCII ART**\n",
         "\n",
         "My recommendation for the image ..."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1fbvnCwoX4hk"
-      },
-      "source": [
-        "**BLANKS AND SUCH**\n",
-        "\n",
-        "My recommendation is to use a list"
       ]
     },
     {
