--- a/Week_8_Worksheet.ipynb
+++ b/Week_8_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 8 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNuA+pc8tgCV0hncn7dL51R",
+      "authorship_tag": "ABX9TyOjSnmuX/I7KxXRE1VNQ+a1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,8 +188,51 @@
       "source": [
         "**ASCII ART**\n",
         "\n",
-        "My recommendation for the image ..."
+        "We haven't talked about computer graphics, and so the easiest way to draw body parts is with some simple ASCII art. \n",
+        "\n",
+        "If you aren't familiar with ASCII art, you could check out the Wikipedia page: https://en.wikipedia.org/wiki/ASCII_art\n",
+        "\n",
+        "I would recommend that you write a function **print_body** that takes in (as input to the function) a number of body parts and prints the body parts. \n",
+        "\n",
+        "Here is a possible example of how **print_body** could work. Feel free to be creative with regards to the art. Also, this example uses 6 body parts, but you could make your game easier by adding more body parts (for example, two feet)."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RskHR_1uVG9l"
+      },
+      "source": [
+        "def print_body(number):\n",
+        "  if number == 1:\n",
+        "    print(\"  (_)  \")\n",
+        "  if number == 2:\n",
+        "    print(\"  (_)  \")\n",
+        "    print(\"   |   \")\n",
+        "    print(\"   |   \")\n",
+        "  if number == 3:\n",
+        "    print(\"  (_)  \")\n",
+        "    print(\"  /|   \")\n",
+        "    print(\" / |   \")\n",
+        "  if number == 4:\n",
+        "    print(\"  (_)  \")\n",
+        "    print(\"  /|\\  \")\n",
+        "    print(\" / | \\ \")\n",
+        "  if number == 5:\n",
+        "    print(\"  (_)  \")\n",
+        "    print(\"  /|\\  \")\n",
+        "    print(\" / | \\ \")\n",
+        "    print(\"  /    \")\n",
+        "    print(\" /     \")\n",
+        "  if number == 6:\n",
+        "    print(\"  (_)  \")\n",
+        "    print(\"  /|\\  \")\n",
+        "    print(\" / | \\ \")\n",
+        "    print(\"  / \\  \")\n",
+        "    print(\" /   \\ \")   "
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -199,7 +242,9 @@
       "source": [
         "**PICKING A WORD**\n",
         "\n",
-        "Hangman isn't fun"
+        "Hangman isn't super fun when the hidden word is always the same. However, it is helpful to start with a simple procedue in a separate function. This allows you to later change the function to do something more interesting without changing the rest of your code.\n",
+        "\n",
+        "**IMPORTANT: THIS WORKSHEET WILL BE MODIFIED IN THE NEXT DAY OR TWO TO ADD ADVICE AND EXAMPLES**"
       ]
     },
     {
@@ -208,7 +253,9 @@
         "id": "jM7S4ymmXN3R"
       },
       "source": [
-        ""
+        "#This is an a foolish example\n",
+        "def choose_word():\n",
+        "  return \"cat\""
       ],
       "execution_count": null,
       "outputs": []
