Fixed bug with index

--- a/Week_8_Worksheet.ipynb
+++ b/Week_8_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 8 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjSnmuX/I7KxXRE1VNQ+a1",
+      "authorship_tag": "ABX9TyPaV9ARYa9PV5uox0VD8Knn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -170,7 +170,7 @@
       "source": [
         "my_list = [\"C\", \"A\", \"T\"]\n",
         "num = my_list.index(\"T\")\n",
-        "print(my_list, ind)\n",
+        "print(my_list, num)\n",
         "\n",
         "letter = \"K\"\n",
         "my_string = \"KITTEN\"\n",
