Minor clarification on index

--- a/Week_8_Worksheet.ipynb
+++ b/Week_8_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 8 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPaV9ARYa9PV5uox0VD8Knn",
+      "authorship_tag": "ABX9TyNQcs6WaoCjIBfHYQoL4FiS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,6 +179,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "APRZlP_738Lw"
+      },
+      "source": [
+        "NOTE: The dot **index** function always returns the location of the first place that the letter is found in the list (or string) ... starting at the begining of the list (or string)"
+      ]
     },
     {
       "cell_type": "markdown",
